# gcp-billing-killswitch

./: .env  .env.template  .gitattributes  .gitignore  GEMINI.md  Makefile  README.md  TODO.md  pyproject.toml
.gemini/: settings.json
deploy/: README.md
deployment/: README.md
docs/: DESIGN.md  architecture-and-walkthrough.md  testing.md  testing_strategy.md
scripts/: deploy.sh  setup-env.sh
src/: main.py  requirements.txt
tests/: budget_alert.json.template  conftest.py  test_main.py
